Prevent overflow-x

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 	--nc-ac-1: #00ecb8;
 }
 
+html {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     width:100%;
     overflow-x:hidden;
